# PracticeEnterprises

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  README.md  main.cpp
config/: colorscheme.ini
config/colorschemes/: bart.ini  basic.ini  chess.com.ini  cyberpunk.ini  dean.ini
doc/: Doxyfile
doc/html/: annotated.html  classes.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca_dep.map  dir_313caf1132e152dd9b58bea13a4052ca_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_99d0482cf009f9d97a0877749b817f19.html  dir_99d0482cf009f9d97a0877749b817f19_dep.map  dir_99d0482cf009f9d97a0877749b817f19_dep.md5  doxygen_crawl.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  namespaces.html
doc/html/d2/d2d/: structChessType_1_1Coords_1_1Hash.html
doc/html/d2/d40/: classChessType_1_1Coords-members.html
doc/html/d2/dbe/: classChessWindow-members.html
doc/html/d2/df6/: classChessWindow__coll__graph.map  classChessWindow__coll__graph.md5
doc/html/d3/d5f/: Game_8h_source.html  structCoords_1_1Hash.html
doc/html/d4/d2b/: classChessScene-members.html
doc/html/d7/d67/: structChessType_1_1Coords_1_1Hash-members.html
doc/html/d7/db7/: Type_8h_source.html
doc/html/d7/ded/: structCoords_1_1Hash-members.html
doc/html/d8/d15/: ChessScene_8h_source.html
doc/html/d8/d3d/: classChessWindow__inherit__graph.map  classChessWindow__inherit__graph.md5
doc/html/d9/d3f/: classGame-members.html
doc/html/d9/d68/: classGame.html
doc/html/da/d50/: classChessScene__inherit__graph.map  classChessScene__inherit__graph.md5
doc/html/db/d82/: classCoords-members.html
doc/html/de/d5b/: classChessScene.html
doc/html/de/d93/: ChessWindow_8h_source.html
doc/html/de/da7/: classGame__coll__graph.map  classGame__coll__graph.md5
doc/html/de/dc6/: classChessType_1_1Coords.html
doc/html/df/d2b/: classCoords.html
doc/html/df/dcb/: namespaceChessType.html
doc/html/df/de3/: classChessWindow.html
doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_2.js  functions_0.js  namespaces_0.js  searchdata.js
doc/latex/: annotated.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
doc/latex/d2/d2d/: structChessType_1_1Coords_1_1Hash.tex
doc/latex/d2/df6/: classChessWindow__coll__graph.md5
doc/latex/d3/d5f/: Game_8h_source.tex  structCoords_1_1Hash.tex
doc/latex/d7/db7/: Type_8h_source.tex
doc/latex/d8/d15/: ChessScene_8h_source.tex
doc/latex/d8/d3d/: classChessWindow__inherit__graph.md5
doc/latex/d9/d68/: classGame.tex
doc/latex/db/df8/: classGame__inherit__graph.md5
doc/latex/dc/d05/: classChessScene__coll__graph.md5
doc/latex/de/d5b/: classChessScene.tex
doc/latex/de/d93/: ChessWindow_8h_source.tex
doc/latex/de/dc6/: classChessType_1_1Coords.tex
gui/: ChessScene.cpp  ChessScene.h  ChessWindow.cpp  ChessWindow.h
src/: Game.cpp  Game.h  main.cpp
src/chessPiece/: ChessPiece.cpp  ChessPiece.h
src/chessPiece/bishop/: Bishop.cpp  Bishop.h
src/chessPiece/king/: King.cpp  King.h
src/chessPiece/knight/: Knight.cpp  Knight.h
src/chessPiece/pawn/: Pawn.cpp  Pawn.h
src/chessPiece/queen/: Queen.cpp  Queen.h
src/chessPiece/rook/: Rook.cpp  Rook.h
src/gui/: ChessMenu.cpp  ChessMenu.h  ChessScene.cpp  ChessScene.h  ChessWindow.cpp  ChessWindow.h
src/utils/: Type.cpp  Type.h
(+3 files in other folders)
